--- a/docker/debian/Dockerfile
+++ b/docker/debian/Dockerfile
@@ -1,16 +1,14 @@
 
 # Debian stable.
 # version 0.0.1
-# Start with ubuntu precise (LTS).
 FROM debian:stable
 
 MAINTAINER stansage <me@stansage.com>
 
 # Never ask for confirmations
 ENV DEBIAN_FRONTEND noninteractive
-#RUN echo "debconf shared/accepted-oracle-license-v1-1 select true" | debconf-set-selections
-#RUN echo "debconf shared/accepted-oracle-license-v1-1 seen true" | debconf-set-selections
+
 # Update apt
 RUN apt-get update
-# First, install add-apt-repository and bzip2
+# Install server software
 RUN apt-get -y install openssh-server
